--- a/stateless-session-case/pom.xml
+++ b/stateless-session-case/pom.xml
@@ -18,6 +18,7 @@
         <hibernate.version>5.4.18.Final</hibernate.version>
         <h2.version>1.4.200</h2.version>
         <junit.version>4.12</junit.version>
+        <druid.version>1.2.16</druid.version>
     </properties>
 
     <dependencies>
@@ -50,7 +51,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.2.16</version>
+            <version>${druid.version}</version>
         </dependency>
 
         <dependency>
